--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 
 <body>
-
-    <div class="wrap-button">
-        <button class="button">Жмякни меня</button>
-        <span class="loader"></span>
+    <div class="app-todo">
+        <h2 class="app-todo__heading">To Do App</h2>
+        <div class="input-field app-todo__input-field"><input class="input-field__input" type="text" name="" id=""
+                value=""><button class="input-field__button">+</button></div>
+        <div class="app-todo__task">
+            <input class="app-todo__checkbox" type="checkbox">
+            <p class="app-todo__text"></p>
+            <div class="app-todo__task-icon"><img src="https://foxkodland.github.io/react-todo/icons/icon-basket.png" alt=""></div>
+            <div class="app-todo__task-icon"><img src="https://foxkodland.github.io/react-todo/icons/icon-pencil.png" alt=""></div>
+        </div>
     </div>
 
-    <div class="quote">
-        <p class="quote-text">Люди, как правило, не отдают себе отчета в том, что в любой момент могут выбросить из
-            своей жизни всё что угодно. В любое время. Мгновенно.</p>
-        <p class="quote-author">Карлсон Вертолётик</p>
-    </div>
+
     <script src="script.js"></script>
 </body>
 
